--- a/ZTV WZIP/Main.storyboard
+++ b/ZTV WZIP/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14D72i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14D87h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
@@ -478,7 +478,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="OCl-Sg-KNR" kind="presentation" identifier="lowFacebook" id="usK-Lb-rFY"/>
+                                            <segue destination="OCl-Sg-KNR" kind="presentation" identifier="sportsFacebook" id="usK-Lb-rFY"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="B18-M0-ohH" style="IBUITableViewCellStyleDefault" id="PNk-dc-11d">
@@ -495,7 +495,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="OCl-Sg-KNR" kind="presentation" identifier="sportsFacebook" id="ZfV-Sg-nhA"/>
+                                            <segue destination="OCl-Sg-KNR" kind="presentation" identifier="lowFacebook" id="ZfV-Sg-nhA"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="VRP-ow-nsk" style="IBUITableViewCellStyleDefault" id="rVH-34-DQk">
@@ -773,8 +773,8 @@
         <image name="undergradz" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="JuT-v6-TBY"/>
-        <segue reference="hsH-tl-Jwg"/>
         <segue reference="JZ4-Mi-RPE"/>
+        <segue reference="cvJ-Pu-93T"/>
+        <segue reference="JuT-v6-TBY"/>
     </inferredMetricsTieBreakers>
 </document>
