--- a/ZTV WZIP/Main.storyboard
+++ b/ZTV WZIP/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14D87h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7519.1" systemVersion="14D87h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7513.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -86,21 +86,21 @@
                                 </connections>
                             </containerView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ztvlogo" translatesAutoresizingMaskIntoConstraints="NO" id="STn-7k-MAE">
-                                <rect key="frame" x="16" y="0.0" width="568" height="266"/>
+                                <rect key="frame" x="16" y="20" width="568" height="246"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="266" id="l0G-ab-zPN"/>
+                                    <constraint firstAttribute="height" constant="246" id="Zwe-l9-Y3B"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="STn-7k-MAE" firstAttribute="centerX" secondItem="wFh-kK-t92" secondAttribute="centerX" id="37e-7u-2tL"/>
-                            <constraint firstItem="wFh-kK-t92" firstAttribute="top" secondItem="STn-7k-MAE" secondAttribute="bottom" constant="8" symbolic="YES" id="5sa-jm-o0e"/>
-                            <constraint firstItem="STn-7k-MAE" firstAttribute="leading" secondItem="Hah-Aj-Nc2" secondAttribute="leadingMargin" id="EYt-tk-sXg"/>
-                            <constraint firstAttribute="trailing" secondItem="wFh-kK-t92" secondAttribute="trailing" id="G7Y-hk-wRv"/>
-                            <constraint firstItem="wFh-kK-t92" firstAttribute="bottom" secondItem="mLJ-16-mqV" secondAttribute="top" id="Q6r-C5-9Qu"/>
-                            <constraint firstItem="wFh-kK-t92" firstAttribute="leading" secondItem="Hah-Aj-Nc2" secondAttribute="leading" id="aPz-a5-I53"/>
-                            <constraint firstItem="STn-7k-MAE" firstAttribute="top" secondItem="Hah-Aj-Nc2" secondAttribute="top" id="av9-f0-27A"/>
+                            <constraint firstItem="wFh-kK-t92" firstAttribute="leading" secondItem="Hah-Aj-Nc2" secondAttribute="leading" id="LKj-aA-zCE"/>
+                            <constraint firstAttribute="trailing" secondItem="wFh-kK-t92" secondAttribute="trailing" id="NFr-ki-JPP"/>
+                            <constraint firstItem="wFh-kK-t92" firstAttribute="top" secondItem="STn-7k-MAE" secondAttribute="bottom" constant="8" symbolic="YES" id="Xxb-fC-HYt"/>
+                            <constraint firstItem="STn-7k-MAE" firstAttribute="leading" secondItem="Hah-Aj-Nc2" secondAttribute="leadingMargin" id="aGm-XZ-agu"/>
+                            <constraint firstItem="wFh-kK-t92" firstAttribute="bottom" secondItem="mLJ-16-mqV" secondAttribute="top" id="bIN-Jo-obe"/>
+                            <constraint firstItem="STn-7k-MAE" firstAttribute="top" secondItem="qsu-rq-ELG" secondAttribute="bottom" id="kzk-Kg-EhL"/>
+                            <constraint firstItem="wFh-kK-t92" firstAttribute="centerX" secondItem="STn-7k-MAE" secondAttribute="centerX" id="ybc-SQ-t75"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="ZTV" image="TV" id="fFp-md-tgk"/>
@@ -310,10 +310,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KVd-CH-rvL">
-                                <rect key="frame" x="0.0" y="44" width="600" height="512"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </webView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="byy-xY-hoq">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <items>
@@ -335,29 +331,23 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cg6-XY-WpU">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                <items>
-                                    <navigationItem id="aH5-gE-5Aa"/>
-                                </items>
-                            </navigationBar>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KVd-CH-rvL">
+                                <rect key="frame" x="0.0" y="8" width="600" height="548"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="byy-xY-hoq" firstAttribute="top" secondItem="KVd-CH-rvL" secondAttribute="bottom" id="9hW-tU-CUm"/>
-                            <constraint firstItem="KVd-CH-rvL" firstAttribute="trailing" secondItem="byy-xY-hoq" secondAttribute="trailing" id="NTY-72-stM"/>
-                            <constraint firstItem="byy-xY-hoq" firstAttribute="bottom" secondItem="QED-df-Q8v" secondAttribute="top" id="P5w-R6-GxM"/>
-                            <constraint firstItem="byy-xY-hoq" firstAttribute="leading" secondItem="Go6-1a-YlG" secondAttribute="leading" id="Tcj-II-Qou"/>
-                            <constraint firstItem="cg6-XY-WpU" firstAttribute="top" secondItem="Go6-1a-YlG" secondAttribute="top" id="YVG-QT-nrI"/>
-                            <constraint firstItem="KVd-CH-rvL" firstAttribute="leading" secondItem="byy-xY-hoq" secondAttribute="leading" id="ZKw-Fh-qBg"/>
-                            <constraint firstItem="cg6-XY-WpU" firstAttribute="leading" secondItem="KVd-CH-rvL" secondAttribute="leading" id="d5T-HL-lYn"/>
-                            <constraint firstItem="KVd-CH-rvL" firstAttribute="top" secondItem="cg6-XY-WpU" secondAttribute="bottom" id="pov-go-lGR"/>
-                            <constraint firstAttribute="trailing" secondItem="KVd-CH-rvL" secondAttribute="trailing" id="qdq-cw-0aV"/>
-                            <constraint firstItem="cg6-XY-WpU" firstAttribute="trailing" secondItem="KVd-CH-rvL" secondAttribute="trailing" id="uxY-dH-wHc"/>
+                            <constraint firstItem="KVd-CH-rvL" firstAttribute="top" secondItem="ScX-uu-DXZ" secondAttribute="bottom" constant="8" symbolic="YES" id="1DG-rk-sCh"/>
+                            <constraint firstItem="byy-xY-hoq" firstAttribute="top" secondItem="KVd-CH-rvL" secondAttribute="bottom" id="4SS-Gq-xvy"/>
+                            <constraint firstAttribute="trailing" secondItem="KVd-CH-rvL" secondAttribute="trailing" id="8y1-A9-YcH"/>
+                            <constraint firstItem="KVd-CH-rvL" firstAttribute="leading" secondItem="byy-xY-hoq" secondAttribute="leading" id="JIZ-XG-3ho"/>
+                            <constraint firstItem="byy-xY-hoq" firstAttribute="trailing" secondItem="KVd-CH-rvL" secondAttribute="trailing" id="Ta7-jR-96Q"/>
+                            <constraint firstItem="byy-xY-hoq" firstAttribute="leading" secondItem="Go6-1a-YlG" secondAttribute="leading" id="g17-gF-kXa"/>
+                            <constraint firstItem="byy-xY-hoq" firstAttribute="bottom" secondItem="QED-df-Q8v" secondAttribute="top" id="mOq-MH-t5e"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="titleBar" destination="cg6-XY-WpU" id="oCp-Fd-5da"/>
                         <outlet property="youtubeWebView" destination="KVd-CH-rvL" id="2XA-ro-if6"/>
                     </connections>
                 </viewController>
@@ -698,15 +688,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d6S-c3-kR4">
-                                <rect key="frame" x="0.0" y="44" width="600" height="512"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="32m-0E-Rw3">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                <items>
-                                    <navigationItem id="nsL-XV-0JG"/>
-                                </items>
-                            </navigationBar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ohq-0Q-maf">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <items>
@@ -731,16 +715,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="d6S-c3-kR4" firstAttribute="trailing" secondItem="32m-0E-Rw3" secondAttribute="trailing" id="4Zj-rg-s6G"/>
-                            <constraint firstItem="d6S-c3-kR4" firstAttribute="leading" secondItem="Ohq-0Q-maf" secondAttribute="leading" id="Nah-mR-vS0"/>
-                            <constraint firstItem="32m-0E-Rw3" firstAttribute="leading" secondItem="kDZ-lX-V2H" secondAttribute="leading" id="Uid-sQ-bcS"/>
-                            <constraint firstAttribute="trailing" secondItem="Ohq-0Q-maf" secondAttribute="trailing" id="Zaf-0f-nVK"/>
-                            <constraint firstItem="Ohq-0Q-maf" firstAttribute="top" secondItem="d6S-c3-kR4" secondAttribute="bottom" id="lM9-NF-iVo"/>
-                            <constraint firstItem="32m-0E-Rw3" firstAttribute="top" secondItem="kDZ-lX-V2H" secondAttribute="top" id="nhM-vq-PrW"/>
-                            <constraint firstItem="d6S-c3-kR4" firstAttribute="top" secondItem="32m-0E-Rw3" secondAttribute="bottom" id="rMV-GF-jww"/>
-                            <constraint firstItem="d6S-c3-kR4" firstAttribute="trailing" secondItem="Ohq-0Q-maf" secondAttribute="trailing" id="rfe-lg-1UF"/>
-                            <constraint firstItem="Ohq-0Q-maf" firstAttribute="bottom" secondItem="vmu-59-Xb2" secondAttribute="top" id="smi-Q7-AYx"/>
-                            <constraint firstItem="32m-0E-Rw3" firstAttribute="leading" secondItem="d6S-c3-kR4" secondAttribute="leading" id="zjd-zc-zcg"/>
+                            <constraint firstItem="d6S-c3-kR4" firstAttribute="top" secondItem="bDj-7E-ZLt" secondAttribute="bottom" id="PxX-9b-CY2"/>
+                            <constraint firstItem="Ohq-0Q-maf" firstAttribute="trailing" secondItem="d6S-c3-kR4" secondAttribute="trailing" id="UjV-Gu-ntJ"/>
+                            <constraint firstItem="Ohq-0Q-maf" firstAttribute="leading" secondItem="kDZ-lX-V2H" secondAttribute="leading" id="ZTM-bq-lat"/>
+                            <constraint firstItem="Ohq-0Q-maf" firstAttribute="top" secondItem="d6S-c3-kR4" secondAttribute="bottom" id="bEz-9o-S3u"/>
+                            <constraint firstItem="Ohq-0Q-maf" firstAttribute="leading" secondItem="d6S-c3-kR4" secondAttribute="leading" id="fL0-E4-kTp"/>
+                            <constraint firstItem="Ohq-0Q-maf" firstAttribute="bottom" secondItem="vmu-59-Xb2" secondAttribute="top" id="m0c-by-QXf"/>
+                            <constraint firstAttribute="trailing" secondItem="Ohq-0Q-maf" secondAttribute="trailing" id="tSs-2T-SIp"/>
                         </constraints>
                     </view>
                     <connections>
@@ -770,7 +751,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="88u-Ma-LqS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="657" y="1227"/>
+            <point key="canvasLocation" x="0.0" y="1297"/>
         </scene>
     </scenes>
     <resources>
